# 3dyne_legacy_tools

./: .gitignore  .gsconf.cdb  .gsconf.cdb.orig  CMakeLists.txt  README.md  levels.txt  license-template.txt  quake21.pal  readme.txt  skys.txt
gs_upi/: CMakeLists.txt  Makefile  Makefile.mingw32  arr.c  arr.h  cdb_service.c  cdb_service.h  cmdpars.c  cmdpars.h  filelumps.h  lib_arche.c  lib_arche.h  lib_bezier.c  lib_bezier.h  lib_container.c  lib_container.h  lib_containerdefs.h  lib_endian.c  lib_endian.h  lib_error.c  lib_error.h  lib_gldbg.c  lib_gldbg.h  lib_hobj.c  lib_hobj.h  lib_math.c  lib_math.h  lib_math_3dnow.h  lib_mem.h  lib_mprof.c  lib_mprof.h  lib_packed.c  lib_packed.h  lib_pfiles.c  lib_pfiles.h  lib_poly.c  lib_poly.h  lib_poly2d.c  lib_poly2d.h  lib_rbtree.c  (+22 more)
process3/: CMakeLists.txt  Makefile  _p3cp  _process3  _process3_test  findfixhobj.sh  fixhobj.sh  rebuild
process3/bsp/: Makefile  bsp.c  bsp.h  bsp2.c  bsp2.h  bsp2face.c  stripbsp.c
process3/class/: Makefile  class_alter.c  class_copy.c  class_new.c  class_split.c
process3/csg/: cbspbrush.c  cbspbrush.h  csg.c  csg.h  csg2.c  csg2.h  surfmerge.c
process3/envopt/: envopt.c  envopt.h
process3/fface/: Makefile  fface.c  fface.h  fface2.c  fface3.c  fface3.h
process3/field/: Makefile  clustermap.c  field.c  field2.c  field_gl.c  r_math.c  r_math.h
process3/flat/: Makefile  bclass.c  flat.c
process3/light/: Makefile  field.c  hashmap.c  hashmap.h  light.c  light.h  lighting.c  lightmap.c  patch.c  pvs.c  sky.c  trace.c
process3/light/poly/: Makefile  epoly.c  matlookup.c  polymerge.c
process3/light/polylight2/: Makefile  csurface.c  light.c  light.h  lightmap.c  trace.c  trace_3dnow.asm
process3/light/shapelight/: 3dnow_vec.asm  3dnow_vec.h  Makefile  balance.c  csurface.c  hashmap.c  light.c  light.h  lighting.c  lightmap.c  patch.c  trace.c  worldpatch.c
process3/mapnode/: Makefile  blockmap.c  fieldnode.c  mapnode.c  mapnode2.c
process3/meshtiles/: Makefile  face_link.c  meshtile1.c  meshtile2.c  tridrop_bsp.c  vertex_bsp.c  vsc2c.c  vsc2class.c
process3/portal/: Makefile  brshclassify.c  brshmrg.c  field.c  gather.c  gather2.c  leafflood.c  leafflood2.c  mkpc.c  mkpc.h  node_debug.c  portal.c  portal.h  portal2.c  portal2.h  solidsurfs.c  visleaf.c  visleaf2.c
process3/pvs/: Makefile  complex.c  gl_client.c  gl_client.h  gl_server.h  pvs.c  pvs.h  pvs_mpi.h  pvs_mpi_complex.c  pvs_mpi_master.c  pvs_mpi_slave.c  trivial.c  visclip.c  visclip.h
process3/pvs_through/: Makefile  complex.c  pvs.c  pvs.h  trivial.c  visclip.c  visclip.h
process3/render/: Makefile  Makefile.mingw32  a_main.c  defs.h  g_blockmap.c  g_blockmap.h  g_bmdefs.h  g_bmlink.c  g_bmobjects.c  g_ccmap3.c  g_ccmap3.h  g_map.c  g_map.h  g_map3cache.c  g_map3cache.h  g_mapdefs.h  g_trace.c  g_trace.h  g_tracedefs.h  interfaces.h  r_cssetup.c  r_csurface.c  r_csurface.h  r_defs.h  r_facesetup.c  r_facesetup.h  r_field.c  r_frustum.c  r_frustum.h  r_frustumdefs.h  r_fsfx.c  r_fsglraster.c  r_fsglrastermt.c  r_fsglva.c  r_fsstate.h  r_fstexcrd.c  r_fstmap.c  r_fstmapmt.c  r_glstate.c  r_hvis.c  (+32 more)
process3/shape/: Makefile  cface2shape.c  csurf2shape.c  sface2shape.c
process3/shared/: CMakeLists.txt  Makefile  defs.h  process.h  type_bspbrush.c  type_bspbrush.h  type_bspnode.c  type_bspnode.h  type_plane.c  type_plane.h  type_portal.c  type_portal.h  type_simple.c  type_simple.h  type_wtexture.c  type_wtexture.h
process3/tjfix/poly/: Makefile  polytjfix.c
process3/tjfix/shape/: Makefile  polytjfix.h  shapetjfix.c  shapetjfix.h
process3/w2p/: Makefile  pump.c  w2p.c  w2p.h  w2p2.c  w2p2.h
util/: CMakeLists.txt  Makefile  dllsyms.c
util/cdbtools/: Makefile  cdbadd.c  cdbget.c  cdbls.c  cdbrm.c
util/imgtools/: Makefile  animview.c  arr2anim.c  gsfview.c  mtga2arr.c  mwal2arr.c  registerarr.c  tdb2res.c  tdbadd.c  tdbchkserver.c  tdbcomment.c  tdbls.c  tdbremove.c  tdbupdate.c  tga242arr.c  tga2arr.c  tga888to555.c  tga888to565.c  tgatocia.c  updatearr.c  wal2arr.c
util/misctools/: Makefile  cadump.c  drand.c  extpack.c  gstimec.c  gstimed.c  gstimes.c  lumpfile.c
util/sartools/: Makefile  dir2pack  dir2sar  dirparse.cc  extpack.c  o_pack.c  o_sar.c  sarls.c
util/system/: Makefile  iosanity.c
wired2/: ATBrowser.cc  ATBrowser.hh  ATEdit.cc  ATEdit.hh  BrushEdit.cc  BrushEdit.hh  CMakeLists.txt  CPoly.cc  CPoly.hh  CSurface.cc  CSurface.hh  CameraView.cc  CameraView.hh  ClipperTool.cc  ClipperTool.hh  CtrlPoint.cc  CtrlPoint.hh  Customize.cc  Customize.hh  Draw3d.cc  Draw3d.hh  EditAble.cc  EditAble.hh  MTemplates.hh  Makefile  MoveTool.cc  MoveTool.hh  TestBox.cc  TestBox.hh  TexBrowser.cc  TexBrowser.hh  TexRes.cc  TexRes.hh  VecMath.hh  WWM.cc  WWM.hh  Wired.cc  Wired.hh  XZView.cc  XZView.hh  (+41 more)
